[package]
name = "openai-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["io-util"] }
axum = { git = "https://github.com/tokio-rs/axum" }
hyper = { version = "0.14", features = ["full"] }
http-serde = "1.1"
thiserror = "1.0"
parking_lot = "0.12"
regex = "1.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
once_cell = "1.17"
toml = { version = "0.7", optional = true }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
pin-project = "1.1.0"
sync_wrapper = { version = "0.1", features = ["futures"] }

[features]
bin = ["tokio/macros", "tokio/rt-multi-thread", "toml", "tracing-subscriber"]
