[package]
name = "openai-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
futures = "0.3"
http-serde = "1.1"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.17"
parking_lot = "0.12"
pin-project = "1.1"
regex = "1.8"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sync_wrapper = { version = "0.1", features = ["futures"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["io-util"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

[[bin]]
name = "openai-hub"
required-features = ["tokio/macros", "tokio/rt-multi-thread", "tracing-subscriber"]