[package]
name = "openai-hub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum" }
futures = "0.3"
http-serde = "1.1"
hyper = { version = "0.14", features = ["full"] }
jwt = { version = "0.16", optional = true }
once_cell = { version = "1.17", optional = true }
parking_lot = "0.12"
pin-project = "1.1"
regex = { version = "1.8", optional = true }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sync_wrapper = { version = "0.1", features = ["futures"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["io-util"] }
toml = "0.7"
tower = "0.4"
tracing = "0.1"

[features]
defutures = ["acl", "jwt-auth"]
acl = ["once_cell", "regex"]
jwt-auth = ["jwt"]
