[package]
name = "openai-hub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { git = "https://github.com/tokio-rs/axum", rev = "786329d85d06549aa1b15f9e4c5d8225c658f468" }
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", optional = true }
futures = "0.3"
hmac = { version = "0.12", optional = true}
http-serde = "1.1"
hyper = { version = "0.14", features = ["full"] }
jwt = { version = "0.16", optional = true }
once_cell = { version = "1.18", optional = true }
parking_lot = "0.12"
pin-project = "1.1"
rand = { version = "0.8", optional = true}
regex = { version = "1.8", optional = true }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", optional = true }
sqlx = { version = "0.6", optional = true }
sync_wrapper = { version = "0.1", features = ["futures"] }
thiserror = "1.0"
tiktoken-rs = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt", "net"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io-util"] }
toml = "0.7"
tower = "0.4"
tracing = "0.1"

[features]
defutures = ["acl", "jwt-auth", "audit", "sqlite", "mysql", "postgres"]
acl = ["once_cell", "regex"]
jwt-auth = ["jwt", "hmac", "sha2", "chrono"]
audit = ["sqlx", "sqlx/runtime-tokio-native-tls", "sqlx/chrono", "chrono", "chrono/serde", "base64-serialize", "rand", "estimate-tokens"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
estimate-tokens = ["tiktoken-rs"]
base64-serialize = ["base64"]
